# DL-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/mlp/: mlp_scalar_circle.cfg
config/perceptron/: perceptron_cuda.cfg  perceptron_scalar.cfg  perceptron_simd.cfg
loader/: data_loader.cpp  data_loader.hpp  run_experiment.cpp
models/: mlp.cpp  model.hpp  perceptron.cpp  run_experiment.cpp
playground/: README.md  create_dlcpp_dataset.py  dataset.py  model.py  plot_data.py
tests/Perceptron/: perceptron_cuda.cfg  perceptron_scalar.cfg  perceptron_simd.cfg
tests/Playground/: README.md  dataset.py
tests/playground/: dataset.py  model.py
units/: activation.cpp  activation.hpp  loss.cpp  loss.hpp  units.cpp  units.hpp
units/autodiff/: CMakeLists.txt  activations.cpp  activations.hpp  computational_graph.cpp  computational_graph.hpp  loss_fns.cpp  loss_fns.hpp  node.hpp  operations.cpp  operations.hpp  units.cpp  units.hpp
units/autodiff/tests/: CMakeLists.txt  test_autodiff.cpp
